--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <input type="email" id="email" name="email" class="full-width"><br>
                 <label class="formtext" for="message">Your message</label>
                 <textarea type="text" id="message" rows="4" name="message" class="full-width"></textarea>
-                <p class="formtext">Would you like to visit the starfish</p><br>
+                <p class="formtext">Would you like to visit the Leopard</p><br>
                 <div class="radio">
                     <label for="yes">Yes</label>
                     <input type="radio" id="yes" name="like" value="Yes">
