--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <main>
-        <div id="img">
+        <div id="img-of-Leopard">
             <h1>Leopard</h1>
         </div>
-        <div id="nav">
+        <div id="manpinder-link-list">
             <ul>
-                <li>Home</li>
-                <li>Story</li>
-                <li>Contact</li>
+                <li class="home-link">Home</li>
+                <li class="story-link">Story</li>
+                <li class="contact-link">Contact</li>
             </ul>
         </div>
-        <div id="content">
+        <div id="content-for-leopard">
             <h2>Life of Leopard</h2>
             <div class="flex">
                 <div class="sec1">
@@ -31,7 +31,7 @@
                     </p> </div>
             </div>
         </div>
-        <div class="facts">
+        <div class="facts-of-Leopard">
             <h2>Facts about Leopard</h2>
             <ul>
                 <li>Leopards are renowned for their agility. They run up to 58km/h and can leap 6m horizontally and 3m vertically. They are also very strong swimmers.</li>
@@ -43,14 +43,14 @@
         <div id="form-contact">
             <h2>Contact to learn more</h2>
             <form>
-                <label class="formtext" for="name">Your name</label><br>
-                <input type="text" id="name" name="name" class="full-width"><br>
-                <label class="formtext" for="email">Your email</label><br>
-                <input type="email" id="email" name="email" class="full-width"><br>
-                <label class="formtext" for="message">Your message</label>
-                <textarea type="text" id="message" rows="4" name="message" class="full-width"></textarea>
-                <p class="formtext">Would you like to visit the Leopard</p><br>
-                <div class="radio">
+                <label class="formtext-info" for="name">Your name</label><br>
+                <input type="text" id="name" name="name" class="full-width-input"><br>
+                <label class="formtext-info" for="email">Your email</label><br>
+                <input type="email" id="email" name="email" class="full-width-input"><br>
+                <label class="formtext-info" for="message">Your message</label>
+                <textarea type="text" id="message" rows="4" name="message" class="full-width-input"></textarea>
+                <p class="formtext-info">Would you like to visit the Leopard</p><br>
+                <div >
                     <label for="yes">Yes</label>
                     <input type="radio" id="yes" name="like" value="Yes">
                     <label for="no">No</label>
